--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
-OWNER_NAME="Ibrahim Adams"
+OWNER_NAME=MARK"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "BMW-MD"
+BOT_NAME= "DESTINY MD"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
 NUMERO_OWNER= "254710772666"
-OWNER_NAME= "᚛Ibrahim adams᚜"
+OWNER_NAME= "᚛MARK᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
